--- a/TestClient/TestClient/TestClient.csproj
+++ b/TestClient/TestClient/TestClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39948D5D-E80C-4748-8A92-BFC3129384A1}</ProjectGuid>
+    <ProjectGuid>{B08C67FF-18B3-4E61-904A-C51953FB9BCF}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Re_translator</RootNamespace>
-    <AssemblyName>Re-translator</AssemblyName>
+    <RootNamespace>TestClient</RootNamespace>
+    <AssemblyName>TestClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,20 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IpTables.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerEntities\UserEntities\AdminEntity.cs" />
-    <Compile Include="ServerEntities\ServerEntity.cs" />
-    <Compile Include="ServerEntities\ServerRoles.cs" />
-    <Compile Include="ServerEntities\UserEntities\HardUserEntity.cs" />
-    <Compile Include="ServerEntities\UserEntities\LightUserEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ServerEntities\Messages\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
