--- a/Re-translator/Re-translator/Re-translator.csproj
+++ b/Re-translator/Re-translator/Re-translator.csproj
@@ -46,9 +46,12 @@
     <Compile Include="IpTables.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerEntities\ServerMessage.cs" />
+    <Compile Include="ServerEntities\UserEntities\AsteriskEntity.cs" />
     <Compile Include="ServerEntities\UserEntities\AdminEntity.cs" />
     <Compile Include="ServerEntities\ServerEntity.cs" />
     <Compile Include="ServerEntities\ServerRoles.cs" />
+    <Compile Include="ServerEntities\UserEntities\DBEntity.cs" />
     <Compile Include="ServerEntities\UserEntities\HardUserEntity.cs" />
     <Compile Include="ServerEntities\UserEntities\LightUserEntity.cs" />
   </ItemGroup>
