Исправлены Action события, проверен на подключении к реальному серверу, добавлен тип неизвестного типа события от сервера, которое пересылается всем, добавлен таймер на подключение клиента, дописывается гостевой класс и авторизация

--- a/Re-translator/Re-translator/Proxy.csproj
+++ b/Re-translator/Re-translator/Proxy.csproj
@@ -44,71 +44,71 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ConcurrentList.cs" />
+    <Compile Include="Helpers\ConnectionTimer.cs" />
     <Compile Include="Helpers\Encryptor.cs" />
     <Compile Include="Helpers\Helper.cs" />
-    <Compile Include="IpTables.cs" />
-    <Compile Include="DeMail.cs" />
+    <Compile Include="Engine\IpTables.cs" />
+    <Compile Include="Engine\DeMail.cs" />
     <Compile Include="Helpers\Logger.cs" />
-    <Compile Include="Helpers\Parser.cs" />
+    <Compile Include="ServerEntities\Asterisk\MessagesParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
-    <Compile Include="ServerEntities\Messages\AsteriskMessage.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\AbsoluteTimeoutAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\ChallengeAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\CommandAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\GetVarAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\HangupAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\ListCommandsAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\LoginAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\LogoffAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\OriginateAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\ParkAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\ParkedCallsAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\PingAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\RedirectAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\ReloadAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\SippeersAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\SIPShowPeerAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Action\StatusAction.cs" />
-    <Compile Include="ServerEntities\Messages\AsteriskAction.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\ChallengeEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\CoreShowChannelsEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\DialBeginEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\DialEndEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\HangupEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\HoldEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\LoginEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\NewChannelEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\NewstateEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\OriginateEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\OriginateResponseEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\ParkedCallEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\ParkedCallsCompleteEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\PeerEntryEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\PeerlistCompleteEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\PingEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\RTCPSentEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\SIPShowPeerEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\StatusEvent.cs" />
-    <Compile Include="ServerEntities\Messages\Asterisk\Event\UnholdEvent.cs" />
+    <Compile Include="Engine\Server.cs" />
+    <Compile Include="ServerEntities\Asterisk\AsteriskMessage.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\AbsoluteTimeoutAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\ChallengeAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\CommandAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\GetVarAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\HangupAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\ListCommandsAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\LoginAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\LogoffAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\OriginateAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\ParkAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\ParkedCallsAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\PingAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\RedirectAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\ReloadAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\SippeersAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\SIPShowPeerAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Action\StatusAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\AsteriskAction.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\ChallengeEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\CoreShowChannelsEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\DialBeginEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\DialEndEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\HangupEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\HoldEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\LoginEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\NewChannelEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\NewstateEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\OriginateEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\OriginateResponseEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\ParkedCallEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\ParkedCallsCompleteEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\PeerEntryEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\PeerlistCompleteEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\PingEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\RTCPSentEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\SIPShowPeerEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\StatusEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\UnholdEvent.cs" />
+    <Compile Include="ServerEntities\Asterisk\Messages\Event\UnknownEvent.cs" />
     <Compile Include="ServerEntities\ServerMessage.cs" />
-    <Compile Include="ServerEntities\Users\AsteriskEntity.cs" />
+    <Compile Include="ServerEntities\Asterisk\AsteriskEntity.cs" />
     <Compile Include="ServerEntities\Users\AdminUser.cs" />
-    <Compile Include="ServerEntities\UserManager.cs" />
+    <Compile Include="ServerEntities\Users\UserManager.cs" />
     <Compile Include="ServerEntities\ServerRoles.cs" />
-    <Compile Include="ServerEntities\Users\DBEntity.cs" />
-    <Compile Include="ServerEntities\Users\GuestEntity.cs" />
-    <Compile Include="ServerEntities\Users\HardUserEntity.cs" />
-    <Compile Include="ServerEntities\Users\LightUserEntity.cs" />
-    <Compile Include="SocketMail.cs" />
+    <Compile Include="ServerEntities\SQL\DBEntity.cs" />
+    <Compile Include="ServerEntities\GuestEntity.cs" />
+    <Compile Include="ServerEntities\Users\HardUser.cs" />
+    <Compile Include="ServerEntities\Users\LightUser.cs" />
+    <Compile Include="Engine\SocketMail.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ServerEntities\Messages\SQL\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
