FakeDB, fake autorization, hard client connected to real asteriksk with our credentials

--- a/Re-translator/Re-translator/Proxy.csproj
+++ b/Re-translator/Re-translator/Proxy.csproj
@@ -50,52 +50,57 @@
     <Compile Include="Engine\IpTables.cs" />
     <Compile Include="Engine\DeMail.cs" />
     <Compile Include="Helpers\Logger.cs" />
+    <Compile Include="Messages\API\AuthAccepted.cs" />
+    <Compile Include="Messages\API\Event\Challenge.cs" />
+    <Compile Include="Messages\Asterisk\Action\ResendAction.cs" />
     <Compile Include="ServerEntities\Asterisk\MessagesParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\Server.cs" />
-    <Compile Include="ServerEntities\Asterisk\AsteriskMessage.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\AbsoluteTimeoutAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\ChallengeAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\CommandAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\GetVarAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\HangupAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\ListCommandsAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\LoginAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\LogoffAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\OriginateAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\ParkAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\ParkedCallsAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\PingAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\RedirectAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\ReloadAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\SippeersAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\SIPShowPeerAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Action\StatusAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\AsteriskAction.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\ChallengeEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\CoreShowChannelsEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\DialBeginEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\DialEndEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\HangupEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\HoldEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\LoginEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\NewChannelEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\NewstateEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\OriginateEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\OriginateResponseEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\ParkedCallEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\ParkedCallsCompleteEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\PeerEntryEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\PeerlistCompleteEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\PingEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\RTCPSentEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\SIPShowPeerEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\StatusEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\UnholdEvent.cs" />
-    <Compile Include="ServerEntities\Asterisk\Messages\Event\UnknownEvent.cs" />
-    <Compile Include="ServerEntities\ServerMessage.cs" />
+    <Compile Include="Messages\Asterisk\AsteriskMessage.cs" />
+    <Compile Include="Messages\Asterisk\Action\AbsoluteTimeoutAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\ChallengeAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\CommandAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\GetVarAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\HangupAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\ListCommandsAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\LoginAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\LogoffAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\OriginateAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\ParkAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\ParkedCallsAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\PingAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\RedirectAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\ReloadAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\SippeersAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\SIPShowPeerAction.cs" />
+    <Compile Include="Messages\Asterisk\Action\StatusAction.cs" />
+    <Compile Include="Messages\Asterisk\AsteriskAction.cs" />
+    <Compile Include="Messages\Asterisk\Event\ChallengeEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\CoreShowChannelsEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\DialBeginEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\DialEndEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\HangupEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\HoldEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\LoginEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\NewChannelEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\NewstateEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\OriginateEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\OriginateResponseEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\ParkedCallEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\ParkedCallsCompleteEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\PeerEntryEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\PeerlistCompleteEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\PingEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\RTCPSentEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\SIPShowPeerEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\StatusEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\UnholdEvent.cs" />
+    <Compile Include="Messages\Asterisk\Event\UnknownEvent.cs" />
+    <Compile Include="Messages\ServerMessage.cs" />
     <Compile Include="ServerEntities\Asterisk\AsteriskEntity.cs" />
+    <Compile Include="ServerEntities\SQL\FakeDB.cs" />
+    <Compile Include="ServerEntities\SQL\IDB.cs" />
     <Compile Include="ServerEntities\Users\AdminUser.cs" />
     <Compile Include="ServerEntities\Users\UserManager.cs" />
     <Compile Include="ServerEntities\ServerRoles.cs" />
