Added native modules, added admin methods; updaed socket mail, removed old socket usage; updated messages: Now message builds wia ctringbuilder

--- a/Re-translator/Proxy.csproj
+++ b/Re-translator/Proxy.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Engine\Module.cs" />
     <Compile Include="Engine\ModuleConnector.cs" />
     <Compile Include="Engine\ProxyEngine.cs" />
+    <Compile Include="Engine\NativeModulesTags.cs" />
     <Compile Include="Helpers\ConcurrentList.cs" />
     <Compile Include="Helpers\ConnectionTimer.cs" />
     <Compile Include="Helpers\Encryptor.cs" />
