--- a/Re-translator/App.config
+++ b/Re-translator/App.config
@@ -1,6 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <configSections>
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+  </configSections>
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="connection.provider">
+        NHibernate.Connection.DriverConnectionProvider
+      </property>
+      <property name="dialect">NHibernate.Dialect.PostgreSQLDialect</property>
+      <property name="query.substitutions">hqlFunction=SQLFUNC</property>
+      <property name="connection.driver_class">
+        NHibernate.Driver.NpgsqlDriver
+      </property>
+      <property name="connection.connection_string">
+        user id=postgres;password=5432;
+        server=localhost;port=5432;
+      </property>
+      <property name="show_sql">true</property>
+      <!--<mapping assembly="NHibernateBasics" />-->
+    </session-factory>
+  </hibernate-configuration>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.4000" newVersion="4.1.0.4000" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
