--- a/Re-translator/packages.config
+++ b/Re-translator/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="NHibernate" version="4.1.1.4000" targetFramework="net461" />
+  <package id="Npgsql" version="3.2.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
 </packages>
