--- a/Re-translator/Proxy.csproj
+++ b/Re-translator/Proxy.csproj
@@ -63,7 +63,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine\Methods.cs" />
-    <Compile Include="Engine\Module.cs" />
     <Compile Include="Engine\ModuleConnector.cs" />
     <Compile Include="Engine\ProxyEngine.cs" />
     <Compile Include="Engine\NativeModulesTags.cs" />
@@ -83,10 +82,12 @@
     <Compile Include="LocalDB\UsersTable\UsersMapper.cs" />
     <Compile Include="Messages\API\Admin\AddModuleCommand.cs" />
     <Compile Include="Messages\API\Admin\AuthResponse.cs" />
-    <Compile Include="Messages\API\Admin\MethodCall.cs" />
+    <Compile Include="Messages\API\ResponseMessages.cs" />
+    <Compile Include="Messages\API\MethodCall.cs" />
     <Compile Include="Messages\API\AuthAccepted.cs" />
     <Compile Include="Messages\API\Event\Challenge.cs" />
     <Compile Include="Messages\API\Event\PingEvent.cs" />
+    <Compile Include="Messages\API\LocalDB\LocalDBLoginMessage.cs" />
     <Compile Include="Messages\Asterisk\Action\ResendAction.cs" />
     <Compile Include="ServerEntities\Asterisk\MessagesParser.cs" />
     <Compile Include="Program.cs" />
@@ -134,9 +135,9 @@
     <Compile Include="Messages\Asterisk\Event\UnknownEvent.cs" />
     <Compile Include="Messages\ServerMessage.cs" />
     <Compile Include="ServerEntities\Asterisk\AsteriskEntity.cs" />
-    <Compile Include="ServerEntities\NativeModule\AsteriskNativeModule.cs" />
-    <Compile Include="ServerEntities\NativeModule\MethodCallerNativeModule.cs" />
-    <Compile Include="ServerEntities\NativeModule\PostgresNativeModule.cs" />
+    <Compile Include="ServerEntities\NativeModule\AsteriskNative.cs" />
+    <Compile Include="Engine\MethodCallerNative.cs" />
+    <Compile Include="ServerEntities\NativeModule\PostgresNative.cs" />
     <Compile Include="ServerEntities\NativeModule\NativeModule.cs" />
     <Compile Include="ServerEntities\SQL\FakeDB.cs" />
     <Compile Include="ServerEntities\SQL\IDB.cs" />
@@ -159,9 +160,9 @@
     <Folder Include="ServerEntities\Module\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LocalDB\AppTable\Applications.hbm.xml" />
-    <EmbeddedResource Include="LocalDB\SubsTable\Subscribtions.hbm.xml" />
-    <EmbeddedResource Include="LocalDB\UsersTable\Users.hbm.xml" />
+    <Content Include="LocalDB\AppTable\Applications.hbm.xml" />
+    <Content Include="LocalDB\SubsTable\Subscribtions.hbm.xml" />
+    <Content Include="LocalDB\UsersTable\Users.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
