--- a/Re-translator/Proxy.csproj
+++ b/Re-translator/Proxy.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Engine\MessageBrocker.cs" />
     <Compile Include="Engine\Methods.cs" />
     <Compile Include="Engine\ModuleConnector.cs" />
     <Compile Include="Engine\ProxyEngine.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="LocalDB\UsersTable\UsersMapper.cs" />
     <Compile Include="Messages\API\Admin\AddModuleCommand.cs" />
     <Compile Include="Messages\API\Admin\AuthResponse.cs" />
+    <Compile Include="Messages\API\Light\CallBegin.cs" />
     <Compile Include="Messages\API\JsonMessage.cs" />
     <Compile Include="Messages\API\Light\Disconnected.cs" />
     <Compile Include="Messages\API\Light\Ping.cs" />
