--- a/Re-translator/packages.config
+++ b/Re-translator/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net461" />
+  <package id="JetBrains.dotMemoryUnit" version="2.3.20160517.113140" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net461" />
   <package id="Npgsql" version="3.2.2" targetFramework="net461" />
