--- a/Re-translator/Proxy.csproj
+++ b/Re-translator/Proxy.csproj
@@ -84,8 +84,10 @@
     <Compile Include="LocalDB\SubsTable\Subscribtions.cs" />
     <Compile Include="LocalDB\UsersTable\Users.cs" />
     <Compile Include="LocalDB\UsersTable\UsersMapper.cs" />
-    <Compile Include="Messages\API\Admin\AddModuleCommand.cs" />
+    <Compile Include="Messages\API\Admin\AddModuleMessage.cs" />
+    <Compile Include="Messages\API\Inner Methods\AddModuleMethod.cs" />
     <Compile Include="Messages\API\Admin\AuthResponse.cs" />
+    <Compile Include="Messages\API\Inner Methods\SubscribeMethod.cs" />
     <Compile Include="Messages\API\Light\CallBegin.cs" />
     <Compile Include="Messages\API\JsonMessage.cs" />
     <Compile Include="Messages\API\Light\CallAction.cs" />
@@ -96,7 +98,8 @@
     <Compile Include="Messages\API\AuthAccepted.cs" />
     <Compile Include="Messages\API\Event\Challenge.cs" />
     <Compile Include="Messages\API\Event\PingEvent.cs" />
-    <Compile Include="Messages\API\LocalDB\LocalDBLoginMessage.cs" />
+    <Compile Include="Messages\API\Inner Methods\LocalDBLoginMessage.cs" />
+    <Compile Include="Messages\API\Shared\SubscribeMessage.cs" />
     <Compile Include="Messages\Asterisk\Action\ResendAction.cs" />
     <Compile Include="ServerEntities\Asterisk\MessagesParser.cs" />
     <Compile Include="Program.cs" />
