added database to connection string

--- a/Re-translator/App.config
+++ b/Re-translator/App.config
@@ -18,7 +18,7 @@
       </property>
       <property name="connection.connection_string">
         user id=postgres;password=5432;
-        server=localhost;port=5432;
+        server=localhost;database=proxy;port=5432;
       </property>
       <property name="show_sql">true</property>
       <!--<mapping assembly="NHibernateBasics" />-->
