--- a/Re-translator/Proxy.csproj
+++ b/Re-translator/Proxy.csproj
@@ -87,6 +87,7 @@
     <Compile Include="LocalDB\WhiteList\WhiteList.cs" />
     <Compile Include="LocalDB\WhiteList\WhiteListMapper.cs" />
     <Compile Include="Messages\API\Admin\AddModuleMessage - Копировать.cs" />
+    <Compile Include="Messages\API\Admin\GetAllUsersMessage.cs" />
     <Compile Include="Messages\API\Admin\GetModulesMessage.cs" />
     <Compile Include="Messages\API\Admin\AddModuleResponse.cs" />
     <Compile Include="Messages\API\Admin\GetUsersOnlineMessage.cs" />
